# gmapp

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: django.yml
core/: urls.py  views.py
gmapp/: asgi.py  settings.py  urls.py
src/gmapp/core/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
src/gmapp/core/forms/: forms_auth.py
src/gmapp/core/handlers/: auth.py  encounters.py
src/gmapp/core/migrations/: 0001_initial.py  0002_encounters_active_alter_encounters_translations.py
src/gmapp/gmapp/: settings.py  urls.py  wsgi.py
src/gmapp/static/css/: styles.css
src/gmapp/static/js/: app.js  encounters.js
src/gmapp/templates/: base_layout.html  dashboard.html  encounters.html  landing.html  music_playlists.html  sign-in.html
src/gmapp/templates/technical/: boilerplate_top.html  navbar.html
static/css/: styles.css
templates/: landing.html
templates/technical/: boilerplate_top.html  public-header.html
