
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gmapp"
version = "0.1.0"
description = "A Webapp designed to support Pen and Paper Gamemasters during sessions"
authors = [
    { name="Casali4", email="" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.setuptools]
package-dir = {"" = "src"}

