
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gmapp"
version = "0.1.0"
description = "A Webapp designed to support Pen and Paper Gamemasters during sessions"
authors = [
    { name="Casali4", email="pap.spieleabend@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asgiref==3.8.1",
  "Django==5.1.7",
  "python-decouple==3.8",
  "sqlparse==0.5.3",
  "tzdata==2025.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

